[package]
name = "hw2"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
comrak = "0.26.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element", "Node", "HtmlElement", "HtmlDivElement", "InputEvent", "HtmlTextAreaElement", "MouseEvent", "console"
] }
