[package]
name = "test01"
version = "0.1.0"
edition = "2021"


[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.64", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.6"
getrandom = { version = "0.2.15", features = ["js"] }
