[package]
name = "pet-store"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
mongodb = "2.8"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
serde = { version = "1.0.204", features = ["derive"] }
simple_logger = "5.0.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
